<resources>
    <string name="app_name" translatable="false">Life on Steroids</string>
    <string name="computer">Computer</string>
    <string name="play_video_games">Play video games</string>
    <string name="talk_on_messengers">Talk on messenger</string>
    <string name="support_a_charity_event">Support a charity event</string>
    <string name="adopt_a_child">Adopt a child</string>
    <string name="make_a_game">Make a game</string>
    <string name="draw_something">Draw something</string>
    <string name="record_movies">Record movies</string>
    <string name="search_for_a_girlfriend">Find a partner</string>
    <string name="status">Status:</string>
    <string name="ask_her_to_marry_you">Ask to marry you</string>
    <string name="buy_her_a_gift">Buy a gift</string>
    <string name="take_her_somewhere">Meet</string>
    <string name="broke_up_with_her">Break up</string>
    <string name="loudging">Lodging: </string>
    <string name="education_main">None</string>
    <string name="transport">Transport: </string>
    <string name="girlfriend">Girlfriend: </string>
    <string name="boyfriend">Boyfriend: </string>
    <string name="position">Position: </string>
    <string name="relations">Relations</string>
    <string name="black_market_title">Black Market</string>
    <string name="years">years</string>
    <string name="days">days</string>
    <string name="work">Work:</string>
    <string name="write_a_book">write a book</string>
    <string name="sleeping">Sleeping</string>
    <string name="playing">Playing</string>
    <string name="talking_on_messengers">Talking on messenger</string>
    <string name="learning">Learning</string>
    <string name="working">Working</string>
    <string name="getting_new_friends">Making New Friends</string>
    <string name="selling_drugs">Selling Drugs</string>
    <string name="send_shop_click_id" translatable="false">shop_click</string>
    <string name="food">Food</string>
    <string name="medicine">Medicine</string>
    <string name="fun">Relaxation</string>
    <string name="tickets">Lottery</string>
    <string name="transportDesc">Transport</string>
    <string name="house">Place</string>
    <string name="clock">clock</string>
    <string name="sleep">Sleep</string>
    <string name="advertisement">Ad</string>
    <string name="safe">Safe</string>
    <string name="settings">Settings</string>
    <string name="play">Play</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_shop">Shop</string>
    <string name="title_computer">Computer</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="recording_movies">Recording Movies</string>
    <string name="writing_poem">Writing Poem</string>
    <string name="drawing_something">Drawing Something</string>
    <string name="making_computer_game">Crafting a Computer</string>
    <string name="found_safe">Policeman found your safe but it was empty!</string>
    <string name="got50Money">You got 50 money!</string>
    <string name="reported2xWeakerGrades">Teacher reported this and you have now 2x weaker grades!</string>
    <string name="reported1FromAllSubjects">Teacher reported this and you\'ve got 1 from all subjects!</string>
    <string name="aLittleBetterMarks">You have a little better marks now.</string>
    <string name="buying_skills">Buying skills</string>
    <string name="sure_to_buy_learn">Are you sure you want to do</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="successful_bought">You have successfully bought this item!</string>
    <string name="already_had_it">You have already bought it!</string>
    <string name="not_enough_money">Unfortunately you don\'t have enough money to buy this</string>
    <string name="lovers">lovers</string>
    <string name="betrothed">betrothed</string>
    <string name="marry">marry</string>
    <string name="single">single</string>
    <string name="engagement">Engagement</string>
    <string name="successful_engagement">You were successfully engaged!</string>
    <string name="getting_married">Getting married</string>
    <string name="successful_marrying">You successfully got married!</string>
    <string name="unsuccessful_engagement">Unfortunately your love didn\'t accept your engagement request</string>
    <string name="unsuccessful_marrying">Unfortunately your love didn\'t accept your request</string>
    <string name="increasing_relationship_level">Increasing relationship level</string>
    <string name="max_relationship_level">You already have a maximum relationship level</string>
    <string name="buy_a_gift">Buy a gift</string>
    <string name="sure_to_buy_her_a_gift">Are you sure you want to buy her a gift for a 100$?</string>
    <string name="sure_to_buy_him_a_gift">Are you sure you want to buy him a gift for a 100$?</string>
    <string name="take_him_somewhere">take him somewhere</string>
    <string name="sure_to_take_her_somewhere">Are you sure you want to take her somewhere for a 75$?</string>
    <string name="break_up">break up</string>
    <string name="sure_to_break_up_with_her">Do you want to break up with her?</string>
    <string name="sure_to_break_up_with_him">Do you want to break up with him?</string>
    <string name="found_love">Found love</string>
    <string name="successful_found_girlfriend">You successfully found love! Her name is</string>
    <string name="successful_found_boyfriend">You successfully found love! His name is</string>
    <string name="sure_to_support_a_charity_event">Are you sure you want to support a charity event for 100$?</string>
    <string name="dont_have_televisor">Unfortunately you don\'t have a TV</string>
    <string name="dont_have_computer_phone">Unfortunately you don\'t have a computer or a phone</string>
    <string name="dont_have_safe">You don\'t have the safe!</string>
    <string name="sure_to_buy_for_7500">Do you want to buy it for 7500$?</string>
    <string name="no_ads">There are currently no ads!</string>
    <string name="cash">Cash:</string>
    <string name="toast_wrong_name">Your name should have 3&#8211;10 characters!</string>
    <string name="money_formatted" translatable="false">%1$s%2$d</string>
    <string name="date_format" translatable="false">%d.%d.%d %d:00</string>
    <string name="socre_format">Score: %d</string>
    <string name="highscore_format">High score: %d</string>
    <string name="shared_preferences_key" translatable="false">shared_preferences</string>
    <string name="saved_character_name_key" translatable="false">character_name</string>
    <string name="saved_character_icon_key" translatable="false">character_icon</string>
    <string name="saved_character_money_key" translatable="false">character_money</string>
    <string name="saved_date_years_key" translatable="false">date_years</string>
    <string name="saved_date_months_key" translatable="false">date_months</string>
    <string name="saved_date_days_key" translatable="false">date_days</string>
    <string name="saved_time_hours_key" translatable="false">time_hours</string>
    <string name="saved_my_lodging_key" translatable="false">my_lodging</string>
    <string name="saved_my_job_key" translatable="false">my_job</string>
    <string name="saved_my_transport_key" translatable="false">my_transport</string>
    <string name="saved_hungry_key" translatable="false">hungry</string>
    <string name="saved_health_key" translatable="false">health</string>
    <string name="saved_energy_key" translatable="false">energy</string>
    <string name="saved_happiness_key" translatable="false">happiness</string>
    <string name="saved_my_computer_key" translatable="false">my_computer</string>
    <string name="saved_my_phone_key" translatable="false">my_phone</string>
    <string name="saved_my_tv_key" translatable="false">my_tv</string>
    <string name="saved_age_years_key" translatable="false">age_years</string>
    <string name="saved_age_days_key" translatable="false">age_days</string>
    <string name="saved_communication_skills_key" translatable="false">communication_skills</string>
    <string name="saved_criminal_points_key" translatable="false">criminal_points</string>
    <string name="saved_have_safe_key" translatable="false">have_safe</string>
    <string name="saved_money_in_safe_key" translatable="false">money_in_safe</string>
    <string name="saved_karma_points_key" translatable="false">karma</string>
    <string name="saved_progress_making_game_key" translatable="false">progress_making_game</string>
    <string name="saved_programming_skills_key" translatable="false">programming_skills</string>
    <string name="saved_games_key" translatable="false">games</string>
    <string name="saved_day_week_key" translatable="false">day_week</string>
    <string name="saved_progress_making_movies_key" translatable="false">progress_making_movies</string>
    <string name="saved_progress_making_book_key" translatable="false">progress_making_book</string>
    <string name="saved_progress_making_drawings_key" translatable="false">progress_making_drawings</string>
    <string name="saved_recording_skills_key" translatable="false">recording_skills</string>
    <string name="saved_writing_skills_key" translatable="false">writing_skills</string>
    <string name="saved_drawing_skills_key" translatable="false">drawing_skills</string>
    <string name="saved_education_points_key" translatable="false">education_points</string>
    <string name="saved_love_key" translatable="false">love</string>
    <string name="saved_love_relations_key" translatable="false">love_relations</string>
    <string name="saved_love_relationship_level_key" translatable="false">love_relationship_level</string>
    <string name="saved_love_name_key" translatable="false">love_name</string>
    <string name="saved_skills_criminal_list_key" translatable="false">skills_criminal_list</string>
    <string name="saved_skills_education_list_key" translatable="false">skills_education_list</string>
    <string name="saved_weapons_list_key" translatable="false">weapons_list</string>
    <string name="saved_is_dead_key" translatable="false">is_dead</string>
    <string name="saved_is_sad_key" translatable="false">is_sad</string>
    <string name="saved_how_long_will_be_sad_key" translatable="false">how_long_will_be_sad</string>
    <string name="saved_books_key" translatable="false">books</string>
    <string name="saved_drawings_key" translatable="false">drawings</string>
    <string name="saved_movies_key" translatable="false">movies</string>
    <string name="saved_is_first_time_key" translatable="false">is_first_time</string>
    <string name="saved_sex_key" translatable="false">sex</string>
    <string name="saved_do_borrow_money_key" translatable="false">do_borrow_money</string>
    <string name="saved_office_jobs_list_key" translatable="false">office_jobs_list</string>
    <string name="saved_criminal_jobs_list_key" translatable="false">criminal_jobs_list</string>
    <string name="saved_number_of_users" translatable="false">users_count</string>
    <string name="shared_preferences_user_key" translatable="false">shared_preferences_user</string>
    <string name="saved_current_user" translatable="false">shared_current_user</string>
    <string name="MY_ADMOB_APP_ID" translatable="false">ca-app-pub-3337866636093645~1700225876</string>
    <string name="pref_title_dark_mode">Enable dark mode</string>
    <string name="pref_description_dark_mode">Godzilla style!
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name" translatable="false">Mr. Hubi</string>
    <string name="option_no">NO</string>
    <string name="reset">Reset</string>
    <string name="pref_key_version" translatable="false">pref_version_key</string>
</resources>