<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="main_category"
        app:title="Main">

    <SwitchPreferenceCompat
        app:key="dark_mode_switch"
        app:title="@string/pref_title_dark_mode"
        app:defaultValue="false"
        app:summary="@string/pref_description_dark_mode"/>

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="name_edit"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name"/>

    <EditTextPreference
        android:defaultValue="@string/option_no"
        android:summary="Wipe all of your data"
        android:key="reset_key"
        android:maxLines="1"
        android:singleLine="true"
        android:title="@string/reset"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:key="about_category"
        app:title="About">

    <Preference app:title="Go to credits"
    app:key="creditsButton"
    app:summary="Awesome people"/>

    <Preference app:title="Send Feedback"
        app:key="feedbackButton"/>

    <Preference
            android:key="@string/pref_key_version"
            android:title="Version" />
    </PreferenceCategory>
</android.support.v7.preference.PreferenceScreen>
